Crash in GPUMaterial with Eevee Material #53413

Closed
opened 2017-11-28 15:41:41 +01:00 by ahmedyounis · 7 comments

Hello Fclem
Im Talking With You On Twitter About Issue On Blender Eevee Scene And Finally I Found The Objects Caused The Problem This_Is_Caused_Issues_To_Eevee.blend

System Information
Linux Mint and Nvidia GeForce Gtx 970

Blender Version
Blender 2.8 Eevee ... Hash 9aece5e1e7

Short description of error

Please Found Attachment File .. This Is Objects Caused To Close Blender Eevee Scene

Hello Fclem Im Talking With You On Twitter About Issue On Blender Eevee Scene And Finally I Found The Objects Caused The Problem [This_Is_Caused_Issues_To_Eevee.blend](https://archive.blender.org/developer/F1218066/This_Is_Caused_Issues_To_Eevee.blend) **System Information** Linux Mint and Nvidia GeForce Gtx 970 **Blender Version** Blender 2.8 Eevee ... Hash 9aece5e1e77 **Short description of error** Please Found Attachment File .. This Is Objects Caused To Close Blender Eevee Scene
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ahmedyounis

Added subscriber: @ahmedyounis

Added subscribers: @fclem, @zeauro

Added subscribers: @fclem, @zeauro
Clément Foucault was assigned by ronan ducluzeau 2017-11-28 16:08:34 +01:00

.blend file requested by @fclem on twitter.

.blend file requested by @fclem on twitter.
Clément Foucault changed title from "fclem" .. Please Found Attachment blender file to Crash in GPUMaterial with Eevee Material 2017-11-28 16:37:05 +01:00

This issue was referenced by e559a99a04

This issue was referenced by e559a99a04131ac0e5edea063d955128815627b8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hello clement
I'm found an issue at last eevee build.. Downloaded today (14/dec)

I opened scene was creating by cycles material and convert every one manually.. I divide it my scene by active view layer. I hide one layer. When creat new principled material the hide layer be active automatically and appear on the scene..

I hope I put my issue in the right place..

Hello clement I'm found an issue at last eevee build.. Downloaded today (14/dec) I opened scene was creating by cycles material and convert every one manually.. I divide it my scene by active view layer. I hide one layer. When creat new principled material the hide layer be active automatically and appear on the scene.. I hope I put my issue in the right place..
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53413
No description provided.