Eevee: Fix T53413: Crash when using displacement bump relink.

ntree_shader_relink_displacement is creating a transient node that does not have a correct original to point to.
In this case we revert to constant uniform.